k8s/randgen-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: randgen-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: randgen
  ports:
    - port: 7080
      targetPort: 7080
