k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kuberentes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - madworks.me
        - www.madworks.me
      secretName: madworks-me
  rules:
    - host: madworks.me
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
          - path: /random/?(.*)
            pathType: Prefix
            backend:
              service:
                name: randgen-cluster-ip-service
                port:
                  number: 7080
    - host: www.madworks.me
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
          - path: /random/?(.*)
            pathType: Prefix
            backend:
              service:
                name: randgen-cluster-ip-service
                port:
                  number: 7080
